syntax = "proto3";

message User {
    int64 id = 1;
    string email = 2;
    string name = 3;
}

service Spork {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc FindByEmail (FindByEmailRequest) returns (User) {}
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message CreateUserRequest {
    string email = 1;
    string password = 2;
    string name = 3;
}

message CreateUserResponse {
    int64 id = 1;
}

message FindByEmailRequest {
    string email = 1;
}
